Tweaked Java options to disable Truffle warning.